--- a/spirit/templates/spirit/_base.html
+++ b/spirit/templates/spirit/_base.html
@@ -33,6 +33,17 @@
         <script src="{{ STATIC_URL }}spirit/scripts/move_comments.js"></script>
     {% endif %}
 
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+                inlineMath: [ ['$','$'] ],
+                displayMath: [ ['$$', '$$'] ],
+                processEscapes: true
+            }
+        });
+    </script>
+    <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
     <script>
 
 	$( document ).ready(function() {
